--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-1.33MB/s(Youtube:不良林), server: 38.68.135.18, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇦🇺 澳大利亚-637.8KB/s(Youtube:不良林), server: 185.167.116.250, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
-  - {name: 🇺🇸 美国-3.25MB/s(Youtube:不良林), server: 38.68.134.85, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇭🇰 (已存活1天)香港-2.13MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
-  - {name: 🇨🇳 中国-1.55MB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.16MB/s(Youtube:不良林), server: hnyd.52147.top, port: 20120, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: hnyd.52147.top, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.00MB/s(Youtube:不良林), server: gzyd2.52147.top, port: 20110, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd2.52147.top, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-8.29MB/s(Youtube:不良林), server: gzyd2.52147.top, port: 20120, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd2.52147.top, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-5.26MB/s(Youtube:不良林), server: gzyd1.52147.top, port: 20120, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd1.52147.top, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-370.3KB/s(Youtube:不良林), server: 164.70.68.67, port: 28443, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-184.7KB/s(Youtube:不良林), server: 38.121.43.71, port: 5600, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇳 中国-813.0KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 捷克-179.2KB/s(Youtube:不良林), server: 195.133.53.192, port: 14369, type: vmess, uuid: 2331affa-1194-45ae-9457-3746120c4751, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 195.133.53.192}}
+  - {name: 🇨🇳 中国-1.85MB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-399.3KB/s(Youtube:不良林), server: 38.121.43.71, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇨🇳 中国-2.50MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-5.42MB/s(Youtube:不良林), server: gzyd1.52147.top, port: 20110, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd1.52147.top, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.90MB/s(Youtube:不良林), server: gzyd1.52147.top, port: 20060, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd1.52147.top, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.02MB/s(Youtube:不良林), server: hnyd.52147.top, port: 20060, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: hnyd.52147.top, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-755.2KB/s(Youtube:不良林), server: 80.78.132.177, port: 28443, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-637.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.25MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活1天)香港-2.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.55MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.26MB/s(Youtube:不良林)
-      - 🇯🇵 日本-370.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-184.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-813.0KB/s(Youtube:不良林)
+      - 捷克-179.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-399.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.02MB/s(Youtube:不良林)
+      - 🇩🇪 德国-755.2KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-637.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.25MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活1天)香港-2.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.55MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.26MB/s(Youtube:不良林)
-      - 🇯🇵 日本-370.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-184.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-813.0KB/s(Youtube:不良林)
+      - 捷克-179.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-399.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.02MB/s(Youtube:不良林)
+      - 🇩🇪 德国-755.2KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-637.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.25MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活1天)香港-2.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.55MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.26MB/s(Youtube:不良林)
-      - 🇯🇵 日本-370.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-184.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-813.0KB/s(Youtube:不良林)
+      - 捷克-179.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-399.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.02MB/s(Youtube:不良林)
+      - 🇩🇪 德国-755.2KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 (已存活1天)香港-2.13MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-637.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.25MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活1天)香港-2.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.55MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.26MB/s(Youtube:不良林)
-      - 🇯🇵 日本-370.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-184.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-813.0KB/s(Youtube:不良林)
+      - 捷克-179.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-399.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.02MB/s(Youtube:不良林)
+      - 🇩🇪 德国-755.2KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-637.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.25MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活1天)香港-2.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.55MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.26MB/s(Youtube:不良林)
-      - 🇯🇵 日本-370.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-184.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-813.0KB/s(Youtube:不良林)
+      - 捷克-179.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-399.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.02MB/s(Youtube:不良林)
+      - 🇩🇪 德国-755.2KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-637.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.25MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活1天)香港-2.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.55MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.26MB/s(Youtube:不良林)
-      - 🇯🇵 日本-370.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-184.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-813.0KB/s(Youtube:不良林)
+      - 捷克-179.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-399.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.02MB/s(Youtube:不良林)
+      - 🇩🇪 德国-755.2KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-637.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.25MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活1天)香港-2.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.55MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.26MB/s(Youtube:不良林)
-      - 🇯🇵 日本-370.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-184.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-813.0KB/s(Youtube:不良林)
+      - 捷克-179.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-399.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.02MB/s(Youtube:不良林)
+      - 🇩🇪 德国-755.2KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
