--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-184.7KB/s(Youtube:不良林), server: 38.121.43.71, port: 5600, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇨🇳 中国-813.0KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 捷克-179.2KB/s(Youtube:不良林), server: 195.133.53.192, port: 14369, type: vmess, uuid: 2331affa-1194-45ae-9457-3746120c4751, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 195.133.53.192}}
-  - {name: 🇨🇳 中国-1.85MB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-399.3KB/s(Youtube:不良林), server: 38.121.43.71, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇨🇳 中国-2.50MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-5.42MB/s(Youtube:不良林), server: gzyd1.52147.top, port: 20110, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd1.52147.top, skip-cert-verify: true}
   - {name: 🇨🇳 中国-3.90MB/s(Youtube:不良林), server: gzyd1.52147.top, port: 20060, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd1.52147.top, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.02MB/s(Youtube:不良林), server: hnyd.52147.top, port: 20060, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: hnyd.52147.top, skip-cert-verify: true}
-  - {name: 🇩🇪 德国-755.2KB/s(Youtube:不良林), server: 80.78.132.177, port: 28443, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.05MB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-268.8KB/s(Youtube:不良林), server: in-sg-1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-sg-1.onebox6.org}}
+  - {name: 🇺🇸 美国-668.6KB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-5.42MB/s(Youtube:不良林), server: gzyd1.52147.top, port: 20110, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd1.52147.top, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-847.1KB/s(Youtube:不良林), server: bai-piao-wang-zhe.hk2.jackson2025.cf, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: bai-piao-wang-zhe.hk2.jackson2025.cf}}
+  - {name: 🇨🇳 中国-2.75MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.81MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-433.5KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-545.2KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-184.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-813.0KB/s(Youtube:不良林)
-      - 捷克-179.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-399.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.50MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.42MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.02MB/s(Youtube:不良林)
-      - 🇩🇪 德国-755.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-268.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-668.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.42MB/s(Youtube:不良林)
+      - 🇭🇰 香港-847.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.81MB/s(Youtube:不良林)
+      - 🇬🇧 英国-433.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-545.2KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-184.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-813.0KB/s(Youtube:不良林)
-      - 捷克-179.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-399.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.50MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.42MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.02MB/s(Youtube:不良林)
-      - 🇩🇪 德国-755.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-268.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-668.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.42MB/s(Youtube:不良林)
+      - 🇭🇰 香港-847.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.81MB/s(Youtube:不良林)
+      - 🇬🇧 英国-433.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-545.2KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-184.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-813.0KB/s(Youtube:不良林)
-      - 捷克-179.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-399.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.50MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.42MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.02MB/s(Youtube:不良林)
-      - 🇩🇪 德国-755.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-268.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-668.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.42MB/s(Youtube:不良林)
+      - 🇭🇰 香港-847.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.81MB/s(Youtube:不良林)
+      - 🇬🇧 英国-433.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-545.2KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-847.1KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-184.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-813.0KB/s(Youtube:不良林)
-      - 捷克-179.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-399.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.50MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.42MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.02MB/s(Youtube:不良林)
-      - 🇩🇪 德国-755.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-268.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-668.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.42MB/s(Youtube:不良林)
+      - 🇭🇰 香港-847.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.81MB/s(Youtube:不良林)
+      - 🇬🇧 英国-433.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-545.2KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-184.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-813.0KB/s(Youtube:不良林)
-      - 捷克-179.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-399.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.50MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.42MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.02MB/s(Youtube:不良林)
-      - 🇩🇪 德国-755.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-268.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-668.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.42MB/s(Youtube:不良林)
+      - 🇭🇰 香港-847.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.81MB/s(Youtube:不良林)
+      - 🇬🇧 英国-433.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-545.2KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-184.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-813.0KB/s(Youtube:不良林)
-      - 捷克-179.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-399.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.50MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.42MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.02MB/s(Youtube:不良林)
-      - 🇩🇪 德国-755.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-268.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-668.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.42MB/s(Youtube:不良林)
+      - 🇭🇰 香港-847.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.81MB/s(Youtube:不良林)
+      - 🇬🇧 英国-433.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-545.2KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-184.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-813.0KB/s(Youtube:不良林)
-      - 捷克-179.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-399.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.50MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.42MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.02MB/s(Youtube:不良林)
-      - 🇩🇪 德国-755.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-268.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-668.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.42MB/s(Youtube:不良林)
+      - 🇭🇰 香港-847.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.81MB/s(Youtube:不良林)
+      - 🇬🇧 英国-433.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-545.2KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
