--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,116 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-1.81MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.96MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-1.68MB/s(Youtube:不良林), server: 203.138.98.199, port: 28443, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-847.1KB/s(Youtube:不良林), server: bai-piao-wang-zhe.hk2.jackson2025.cf, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: bai-piao-wang-zhe.hk2.jackson2025.cf}}
-  - {name: 🇨🇳 中国-310.5KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
-  - {name: 🇸🇬 新加坡-1.96MB/s(Youtube:不良林), server: sg1.jjzgy.live, port: 32333, type: trojan, password: 1c3dd378-6dc3-3a81-8461-ae927cd6fb7c, sni: sg1.jjzgy.live, skip-cert-verify: true}
   - {name: 🇻🇳 越南-4.68MB/s(Youtube:不良林), server: 103.173.255.228, port: 28443, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-3.44MB/s(Youtube:不良林), server: 43.129.30.122, port: 42567, type: vmess, uuid: 7744b0d0-3cae-4ba4-d44d-2a2869ef4eea, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.76MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 22168, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-382.1KB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇸🇬 新加坡-2.19MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-821.4KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-451.3KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
+  - {name: 🇨🇳 中国-533.9KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-1.27MB/s(Youtube:不良林), server: 185.167.116.250, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
+  - {name: 🇯🇵 日本-1.45MB/s(Youtube:不良林), server: 164.70.68.67, port: 28443, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-1.40MB/s(Youtube:不良林), server: 141.98.168.251, port: 443, type: trojan, password: LiX1tV, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.82MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.96MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.68MB/s(Youtube:不良林)
-      - 🇭🇰 香港-847.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-310.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.96MB/s(Youtube:不良林)
       - 🇻🇳 越南-4.68MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-382.1KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.19MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-821.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-451.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-533.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.27MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.45MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.40MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.82MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-1.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.96MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.68MB/s(Youtube:不良林)
-      - 🇭🇰 香港-847.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-310.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.96MB/s(Youtube:不良林)
       - 🇻🇳 越南-4.68MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-382.1KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.19MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-821.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-451.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-533.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.27MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.45MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.40MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.82MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.96MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.68MB/s(Youtube:不良林)
-      - 🇭🇰 香港-847.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-310.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.96MB/s(Youtube:不良林)
       - 🇻🇳 越南-4.68MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-382.1KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.19MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-821.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-451.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-533.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.27MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.45MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.40MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.82MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-847.1KB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.44MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-1.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.96MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.68MB/s(Youtube:不良林)
-      - 🇭🇰 香港-847.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-310.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.96MB/s(Youtube:不良林)
       - 🇻🇳 越南-4.68MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-382.1KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.19MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-821.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-451.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-533.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.27MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.45MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.40MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.82MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.96MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.68MB/s(Youtube:不良林)
-      - 🇭🇰 香港-847.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-310.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.96MB/s(Youtube:不良林)
       - 🇻🇳 越南-4.68MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-382.1KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.19MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-821.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-451.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-533.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.27MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.45MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.40MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.82MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.96MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.68MB/s(Youtube:不良林)
-      - 🇭🇰 香港-847.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-310.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.96MB/s(Youtube:不良林)
       - 🇻🇳 越南-4.68MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-382.1KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.19MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-821.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-451.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-533.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.27MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.45MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.40MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.82MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -130,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.96MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.68MB/s(Youtube:不良林)
-      - 🇭🇰 香港-847.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-310.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.96MB/s(Youtube:不良林)
       - 🇻🇳 越南-4.68MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-382.1KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.19MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-821.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-451.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-533.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.27MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.45MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.40MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.82MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
